--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -116,7 +116,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
-            android:background="@drawable/ripple_effect"
+            android:background="@drawable/ripple_basic"
             android:text="로그인" />
 
     </LinearLayout>
