--- a/app/src/main/res/layout/listview_server_list_item.xml
+++ b/app/src/main/res/layout/listview_server_list_item.xml
@@ -1,24 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/serverList"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/serverName"
+    <LinearLayout
+        android:id="@+id/body"
+        android:paddingStart="8dp"
+        android:gravity="center|start"
+        android:orientation="vertical"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="4"
-        android:gravity="center"
-        />
-    <TextView
-        android:id="@+id/serverId"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="4"
-        android:gravity="center"
-        android:visibility="invisible"
-        />
+        android:layout_height="match_parent"
+        android:layout_weight="8">
 
+        <TextView
+            android:id="@+id/serverName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/nomalText">
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/serverId"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:visibility="gone">
+
+        </TextView>
+    </LinearLayout>
+
+    <LinearLayout
+        android:paddingEnd="12dp"
+        android:layout_width="0dp"
+        android:gravity="end|center"
+        android:layout_weight="2"
+        android:layout_height="match_parent">
+
+        <Switch
+            android:id="@+id/instanceOnOff"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:track="@drawable/switch_track_selector"
+            android:thumb="@drawable/switch_thumb_selector">
+
+        </Switch>
+
+    </LinearLayout>
 </LinearLayout>
