--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -3,10 +3,37 @@
     <style name="sectionBar">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">#70A4A4A4</item>
+        <item name="android:background">#E1F5FE</item>
         <item name="android:orientation">horizontal</item>
-        <item name="android:paddingBottom">2dp</item>
-        <item name="android:paddingLeft">10dp</item>
-        <item name="android:paddingTop">2dp</item>
+        <item name="android:layout_marginLeft">30dp</item>
+        <item name="android:layout_marginRight">30dp</item>
+        <item name="android:layout_marginBottom">25dp</item>
+    </style>
+
+    <!-- Common Style -->
+    <style name="warp_default">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+    <style name="nomalText" parent="warp_default">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+    </style>
+    <style name="nomalTextW" parent="nomalText">
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+    <style name="nomalTextCyan" parent="nomalText">
+        <item name="android:textColor">#40C4FF</item>
+    </style>
+
+    <style name="smallText" parent="warp_default">
+        <item name="android:textSize">10sp</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:layout_marginRight">10dp</item>
     </style>
 </resources>
