--- a/app/src/main/res/layout/listview_server_list_title.xml
+++ b/app/src/main/res/layout/listview_server_list_title.xml
@@ -6,6 +6,6 @@
         android:id="@+id/resultTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/nomalTextCyan" />
+        style="@style/nomalTextNavy" />
 
 </LinearLayout>
