--- a/app/src/main/res/drawable/ripple_basic.xml
+++ b/app/src/main/res/drawable/ripple_basic.xml
@@ -5,15 +5,15 @@
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
             android:padding="10dp"
             android:shape="rectangle" >
-            <solid android:color="#0D47A1" />
+            <solid android:color="#0B3861" />
             <corners
-                android:bottomLeftRadius="12dp"
-                android:bottomRightRadius="12dp"
-                android:topLeftRadius="12dp"
-                android:topRightRadius="12dp" />
+                android:bottomLeftRadius="8dp"
+                android:bottomRightRadius="8dp"
+                android:topLeftRadius="8dp"
+                android:topRightRadius="8dp" />
             <stroke
                 android:width="1dp"
-                android:color="#1A237E" />
+                android:color="#0B3861" />
         </shape>
     </item>
 </ripple>
