--- a/app/src/main/res/drawable/ripple_stop.xml
+++ b/app/src/main/res/drawable/ripple_stop.xml
@@ -5,7 +5,7 @@
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
             android:padding="10dp"
             android:shape="rectangle" >
-            <solid android:color="#FF3D00" />
+            <solid android:color="#DF7401" />
             <corners
                 android:bottomLeftRadius="12dp"
                 android:bottomRightRadius="12dp"
