--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:layout_marginBottom="25dp"
+        android:background="#0B3861"
         android:gravity="center_vertical"
         >
 
@@ -19,8 +21,9 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_gravity="left|center_vertical"
+            android:textColor="#FFFFFF"
             android:textSize="20dp"
-            android:text="ⓑ  ⓣ  ⓣ" />
+            android:text="㉥  ㉫  ㉫" />
 
         <View
             android:layout_width="0dp"
@@ -34,24 +37,9 @@
             android:layout_marginRight="10dp"
             android:layout_gravity="right|center_vertical"
             android:gravity="center_vertical"
+            android:textColor="#FFFFFF"
             android:textSize="25dp"
-            android:text=" ━ " />
-
-    </LinearLayout>
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/linearLayoutDiv"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/linearLayoutTop"
-        android:layout_marginBottom="25dp"
-        >
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/black"/>
+            android:text="" />
 
     </LinearLayout>
 
@@ -60,39 +48,42 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/linearLayoutDiv"
+        android:layout_below="@id/linearLayoutTop"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginBottom="25dp"
         android:layout_gravity="top"
         android:background="#E1F5FE"
-        android:gravity="center">
+        android:gravity="center"
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/infoText1"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_gravity="left"
             android:textSize="20dp"
             android:textColor="#40C4FF"
+            android:visibility="gone"
             android:text="name#" />
 
         <TextView
             android:id="@+id/infoText2"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_gravity="left"
             android:textSize="20dp"
             android:textColor="#40C4FF"
+            android:visibility="gone"
             android:text="email#" />
 
         <TextView
             android:id="@+id/infoText3"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
@@ -103,162 +94,103 @@
 
         <TextView
             android:id="@+id/infoText4"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginBottom="25dp"
-            android:textSize="0dp"
+            android:layout_marginBottom="5dp"
+            android:textSize="20dp"
             android:textColor="#40C4FF"
-            android:text="" />
+            android:text="token#" />
 
     </LinearLayout>
 
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:id="@+id/linearLayoutBody"
+        android:gravity="center"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_below="@id/linearLayoutHead"
-        android:gravity="center">
+        android:layout_height="match_parent"
+        android:layout_below="@id/linearLayoutHead">
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="8dp"
-            android:layout_marginBottom="25dp"
-            android:background="@drawable/div_line"/>
-
-        <Button
-            android:id="@+id/oneBtn"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="15dp"
-            android:background="@drawable/ripple_basic"
-            android:textColor="@color/white"
-            android:text="Server List" />
-
-        <ListView
-            android:id="@+id/serverList"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="15dp">
-
-        </ListView>
-
-        <!--
         <LinearLayout
+            android:id="@+id/body1"
+            android:gravity="top|start"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="0dp"
-            android:layout_marginRight="0dp"
-            android:orientation="vertical">
+            android:layout_height="0dp"
+            android:layout_weight="7">
+
+            <ListView
+                android:id="@+id/serverList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp">
+            </ListView>
 
         </LinearLayout>
 
-        <ListView
+        <LinearLayout
+            android:id="@+id/body2"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2">
+
+            <Button
+                android:id="@+id/renewTokenBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="15dp"
+                android:background="@drawable/ripple_basic"
+                android:textColor="@color/white"
+                android:text="토큰 갱신" />
+
+            <Button
+                android:id="@+id/serverUsageBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="15dp"
+                android:background="@drawable/ripple_basic"
+                android:textColor="@color/white"
+                android:text="리스트 갱신" />
+
+            <Button
+                android:id="@+id/serverCreateBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="15dp"
+                android:background="@drawable/ripple_basic"
+                android:textColor="@color/white"
+                android:text="서버 생성" />
+
+        </LinearLayout>
+
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/linearLayoutBottom"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:layout_marginTop="5dp"
-            android:clickable="false"
-            android:fadeScrollbars="false"
-            android:fadingEdge="none"
-            android:fastScrollEnabled="true"
-            android:visibility="invisible"
-            android:id="@+id/serverListView">
+            android:layout_alignParentBottom="true"
+            android:layout_weight="0"
+            android:gravity="center|bottom">
 
-        </ListView>
-        -->
+            <TextView
+                android:id="@+id/teamLogo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:textSize="15dp"
+                android:text="@string/team_logo" />
 
-        <Button
-            android:id="@+id/twoBtn"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="15dp"
-            android:background="@drawable/ripple_basic"
-            android:textColor="@color/white"
-            android:text="Create Server" />
-
-        <Button
-            android:id="@+id/threeBtn"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="15dp"
-            android:background="@drawable/ripple_basic"
-            android:textColor="@color/white"
-            android:visibility="invisible"
-            android:text="setUserRole" />
-
-        <Button
-            android:id="@+id/fourBtn"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="15dp"
-            android:background="@drawable/ripple_basic"
-            android:textColor="@color/white"
-            android:visibility="invisible"
-            android:text="setAddRole" />
-
-        <Button
-            android:id="@+id/fiveBtn"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="15dp"
-            android:background="@drawable/ripple_basic"
-            android:textColor="@color/white"
-            android:visibility="invisible"
-            android:text="getCreateUserToken" />
-
-    </LinearLayout>
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/linearLayoutResult"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_below="@id/linearLayoutBody"
-        android:gravity="center">
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="8dp"
-            android:layout_marginBottom="25dp"
-            android:background="@drawable/div_line"/>
-
-
-    </LinearLayout>
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/linearLayoutBottom"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:gravity="center">
-
-        <TextView
-            android:id="@+id/teamLogo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:textSize="15dp"
-            android:text="@string/team_logo" />
-
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
