--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -3,7 +3,6 @@
     <style name="sectionBar">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">#E1F5FE</item>
         <item name="android:orientation">horizontal</item>
         <item name="android:layout_marginLeft">30dp</item>
         <item name="android:layout_marginRight">30dp</item>
@@ -27,6 +26,12 @@
     </style>
     <style name="nomalTextCyan" parent="nomalText">
         <item name="android:textColor">#40C4FF</item>
+    </style>
+    <style name="nomalTextGray" parent="nomalText">
+        <item name="android:textColor">#9E9E9E</item>
+    </style>
+    <style name="nomalTextNavy" parent="nomalText">
+        <item name="android:textColor">#0B3861</item>
     </style>
 
     <style name="smallText" parent="warp_default">
