--- a/app/src/main/res/layout/listview_server_list_item.xml
+++ b/app/src/main/res/layout/listview_server_list_item.xml
@@ -45,6 +45,15 @@
             style="@style/smallText">
 
         </TextView>
+
+        <TextView
+            android:id="@+id/tenantId"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            style="@style/smallText">
+
+        </TextView>
     </LinearLayout>
 
     <LinearLayout
